// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThemeStoreItem > (Snapshot) renders installed state 1`] = `
<DocumentFragment>
  <div
    class="flex"
    data-testid="theme-store-item"
  >
    <div
      class="border-border flex w-full rounded-md border-(length:--border-width) bg-background-secondary text-foreground shadow-shadow relative h-auto min-w-0 flex-1 overflow-hidden p-1.5"
    >
      <div
        class="absolute inset-0 flex"
      >
        <div
          class="-mx-4 flex-1 scale-y-110 -skew-x-12 first:-ml-8 last:-mr-8"
          style="background-color: oklch(0.96 0.055 96);"
        />
        <div
          class="-mx-4 flex-1 scale-y-110 -skew-x-12 first:-ml-8 last:-mr-8"
          style="background-color: oklch(0.28 0 263);"
        />
        <div
          class="-mx-4 flex-1 scale-y-110 -skew-x-12 first:-ml-8 last:-mr-8"
          style="background-color: oklch(0.62 0.171 46);"
        />
        <div
          class="-mx-4 flex-1 scale-y-110 -skew-x-12 first:-ml-8 last:-mr-8"
          style="background-color: oklch(0.34 0.007 48);"
        />
      </div>
      <div
        class="border-border flex h-full w-full rounded-md border-(length:--border-width) p-4 bg-background-secondary text-foreground shadow-none relative flex-1 flex-row items-center justify-between gap-2 !p-2"
      >
        <div
          class="flex min-w-0 flex-1 flex-col gap-0.5"
        >
          <div
            class="flex min-w-0 flex-wrap items-baseline gap-x-2 gap-y-0.5"
          >
            <h3
              class="text-foreground truncate text-sm font-bold"
              data-testid="theme-store-item-name"
            >
              Gruvbox
            </h3>
            <p
              class="text-foreground-secondary truncate text-xs"
              data-testid="theme-store-item-author"
            >
              by nukeop
            </p>
            <span
              class="border-border inline-flex items-center justify-center border-(length:--border-width) whitespace-nowrap rounded-full px-2 py-0.5 text-xs font-semibold bg-accent-cyan text-accent-foreground"
            >
              retro
            </span>
            <span
              class="border-border inline-flex items-center justify-center border-(length:--border-width) whitespace-nowrap rounded-full px-2 py-0.5 text-xs font-semibold bg-accent-cyan text-accent-foreground"
            >
              warm
            </span>
          </div>
          <p
            class="text-foreground-secondary line-clamp-1 text-xs"
            data-testid="theme-store-item-description"
          >
            Retro groove color scheme. Based on the classic Vim theme.
          </p>
        </div>
        <div
          class="flex shrink-0 items-center gap-1"
        >
          <div>
            <button
              aria-label="Apply"
              class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-primary-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none size-8 justify-center"
              data-headlessui-state=""
              data-testid="theme-store-item-apply"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-paintbrush"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m14.622 17.897-10.68-2.913"
                />
                <path
                  d="M18.376 2.622a1 1 0 1 1 3.002 3.002L17.36 9.643a.5.5 0 0 0 0 .707l.944.944a2.41 2.41 0 0 1 0 3.408l-.944.944a.5.5 0 0 1-.707 0L8.354 7.348a.5.5 0 0 1 0-.707l.944-.944a2.41 2.41 0 0 1 3.408 0l.944.944a.5.5 0 0 0 .707 0z"
                />
                <path
                  d="M9 8c-1.804 2.71-3.97 3.46-6.583 3.948a.507.507 0 0 0-.302.819l7.32 8.883a1 1 0 0 0 1.185.204C12.735 20.405 16 16.792 16 15"
                />
              </svg>
            </button>
          </div>
          <div>
            <button
              aria-label="Remove"
              class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none size-8 justify-center bg-accent-red text-accent-foreground"
              data-headlessui-state=""
              data-testid="theme-store-item-uninstall"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-trash"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                />
                <path
                  d="M3 6h18"
                />
                <path
                  d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ThemeStoreItem > (Snapshot) renders with all props 1`] = `
<DocumentFragment>
  <div
    class="flex"
    data-testid="theme-store-item"
  >
    <div
      class="border-border flex w-full rounded-md border-(length:--border-width) bg-background-secondary text-foreground shadow-shadow relative h-auto min-w-0 flex-1 overflow-hidden p-1.5"
    >
      <div
        class="absolute inset-0 flex"
      >
        <div
          class="-mx-4 flex-1 scale-y-110 -skew-x-12 first:-ml-8 last:-mr-8"
          style="background-color: oklch(0.96 0.055 96);"
        />
        <div
          class="-mx-4 flex-1 scale-y-110 -skew-x-12 first:-ml-8 last:-mr-8"
          style="background-color: oklch(0.28 0 263);"
        />
        <div
          class="-mx-4 flex-1 scale-y-110 -skew-x-12 first:-ml-8 last:-mr-8"
          style="background-color: oklch(0.62 0.171 46);"
        />
        <div
          class="-mx-4 flex-1 scale-y-110 -skew-x-12 first:-ml-8 last:-mr-8"
          style="background-color: oklch(0.34 0.007 48);"
        />
      </div>
      <div
        class="border-border flex h-full w-full rounded-md border-(length:--border-width) p-4 bg-background-secondary text-foreground shadow-none relative flex-1 flex-row items-center justify-between gap-2 !p-2"
      >
        <div
          class="flex min-w-0 flex-1 flex-col gap-0.5"
        >
          <div
            class="flex min-w-0 flex-wrap items-baseline gap-x-2 gap-y-0.5"
          >
            <h3
              class="text-foreground truncate text-sm font-bold"
              data-testid="theme-store-item-name"
            >
              Gruvbox
            </h3>
            <p
              class="text-foreground-secondary truncate text-xs"
              data-testid="theme-store-item-author"
            >
              by nukeop
            </p>
            <span
              class="border-border inline-flex items-center justify-center border-(length:--border-width) whitespace-nowrap rounded-full px-2 py-0.5 text-xs font-semibold bg-accent-cyan text-accent-foreground"
            >
              retro
            </span>
            <span
              class="border-border inline-flex items-center justify-center border-(length:--border-width) whitespace-nowrap rounded-full px-2 py-0.5 text-xs font-semibold bg-accent-cyan text-accent-foreground"
            >
              warm
            </span>
          </div>
          <p
            class="text-foreground-secondary line-clamp-1 text-xs"
            data-testid="theme-store-item-description"
          >
            Retro groove color scheme. Based on the classic Vim theme.
          </p>
        </div>
        <div
          class="shrink-0"
        >
          <button
            class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-primary-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none h-9 px-3 min-w-24"
            data-headlessui-state=""
            data-testid="theme-store-item-install"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-download"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 15V3"
              />
              <path
                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
              />
              <path
                d="m7 10 5 5 5-5"
              />
            </svg>
            <span
              class="ml-2"
            >
              Install
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
